fix: don't adblock too much

--- a/public/components/adblock.css
+++ b/public/components/adblock.css
@@ -1,3 +1,3 @@
-.ts-join-community {
+.ts-join-community .tsv-button-filled {
   display: none;
 }
